# offerpilot

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE_REVIEW.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  go.mod  go.sum  pyproject.toml  tickets-knowledge-imported-source-ingest.md  tickets.md
.claude/: settings.json
docs/: BUGS.md  p0-release-checklist.md  python-cutover-verification.md  python-rewrite-contract.md
scripts/: docker-smoke.ps1  docker-smoke.sh  install-gate.ps1  install-gate.sh  install.sh  local-smoke.ps1  local-smoke.sh  pilot-real-ai-browser-harness.ps1  release-gate.ps1  release-gate.sh
tests/: _kbr05_helpers.py  _knowledge_seam.py  conftest.py  test_ai_agent.py  test_ai_client.py  test_ai_tools.py  test_api_contract.py  test_application_status.py  test_applications_api.py  test_applications_repository.py  test_auth_api.py  test_calendar_api.py  test_chat_api.py  test_chat_repository.py  test_cli.py  test_conditional_delete_repositories.py  test_config.py  test_cutover_files.py  test_database.py  test_diagnostics_api.py  test_events_api.py  test_evidence_bundles_api.py  test_evidence_bundles_repository.py  test_health.py  test_interview_knowledge_capture_ai.py  test_interview_knowledge_capture_api.py  test_interview_knowledge_capture_fragments.py  test_interview_knowledge_capture_migrations.py  test_interview_knowledge_capture_repository.py  test_interview_review_migrations.py  test_interview_review_proposals_ai.py  test_interview_review_proposals_api.py  test_jd_resume_ai_api.py  (+51 more)
(+525 files in other folders)
