[project]
name = "offerpilot"
version = "0.1.0"
description = "Python backend for OfferPilot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langgraph>=1.2.8",
  "langgraph-checkpoint-sqlite>=3.1.0",
  "litellm>=1.91.0",
  "pydantic>=2.8.0",
  "pypdf>=5.0.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.0",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
oc = "offerpilot.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/offerpilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
